--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,3 +28,7 @@ a {
   color: inherit;
   text-decoration: none;
 }
+
+.css-did544-MuiButtonBase-root-MuiButton-root{
+  background-color: green;
+}
